New Relic Careers - Senior Software Engineer - Javascript. Zynga Careers - Senior Software Engineer - Words With Friends. Ayla Networks Careers - Senior Embedded Software Engineer. Ayla Networks Careers - Embedded Software Engineer. Senior Software Engineer - Optel Group - Career Page. Netatmo iOS Software Engineer | SmartRecruiters. LaunchCode Junior Software Developer | SmartRecruiters. LaunchCode Junior Software Developer | SmartRecruiters. LaunchCode Entry Level Software Engineer | SmartRecruiters. LaunchCode Entry Level Software Engineer | SmartRecruiters. LaunchCode Entry Level Software Developer | SmartRecruiters. LaunchCode Entry Level Software Developer | SmartRecruiters. Adam Kay Group Sr. Software Engineer - Web Developer | SmartRecruiters. ??RezScore Jobs - EnergyHub Senior Software Engineer. Upwork - Senior Software Engineer, Tech Lead. MORI Associates, Inc. Careers - Embedded Real-Time Software Engineer - NASA - autonomous air vehicles. Senior Software Engineer für B2B-Software in Zürich at Scope Content AG. Points International Technical Lead, Software Engineering | SmartRecruiters. NICE Careers - Senior Java Software Engineer. KMS Technology FRESHER JAVA SOFTWARE ENGINEER | SmartRecruiters. KMS Technology FRESHER DEVOPS SOFTWARE ENGINEER | SmartRecruiters. KMS Technology FRESHER FRONT-END SOFTWARE ENGINEER | SmartRecruiters. Senior Software Engineer #0254 job at GlobalSign in London, United Kingdom, powered by JobScore. Very Good Security - Junior Software Engineer. Software Engineer. Tenable Careers - Senior Software Engineer - Full Stack. Benefitfocus Careers - Sr. Software Engineer - AI. Vichara Software Engineer Lead - Salesforce | SmartRecruiters. Greppy Systems Backend Software Engineer (Go Developer) | SmartRecruiters. Software Engineer - LAMP Stack - TIER4 GROUP. Lead Software Engineer | CV-Library.co.uk | 211098088. Software Engineer - Red Hat | Women Who Code. Job Application for Senior Software Engineer_Marketing Platform at Coupang. Job A

--- a/software.html
+++ b/software.html
@@ -40,19 +40,19 @@
     <div class="container">
 <!--Begin body here --> 
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q6M9VfwG&k=Job&j=ojDUafwK&__jvst=Employee&__jvsd=s8Ischwg&__jvsc=Twitter&bid=n2dBnMwu'>New Relic Careers - Senior Software Engineer - Javascript</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Barcelona, Spain</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
 <h5><a href='https://jobs.jobvite.com/zynga/job/oLjpbfwo'>Zynga Careers - Senior Software Engineer - Words With Friends</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Toronto, Canada</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 <h5><a href='https://jobs.jobvite.com/ayla-networks/job/ooRlbfwv'>Ayla Networks Careers - Senior Embedded Software Engineer</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Bangalore, India</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 <h5><a href='https://jobs.jobvite.com/ayla-networks/job/oyRlbfwF'>Ayla Networks Careers - Embedded Software Engineer</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Bangalore, India</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 <h5><a href='http://optelgroup.applytojob.com/apply/uTqcKdkTE8/Senior-Software-Engineer'>Senior Software Engineer - Optel Group - Career Page</a></h5> 
@@ -67,7 +67,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/LaunchCode/743999698409772-junior-software-developer'>LaunchCode Junior Software Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/LaunchCode/743999698409772-junior-software-developer'>LaunchCode Junior Software Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -103,11 +103,11 @@
 <p><span class="badge badge-light">Mountain View, California</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<h5><a href='https://scope-content-ag.breezy.hr/p/fad6d7982e5e-senior-software-engineer-f-r-b2b-software-in-z-rich'>Senior Software Engineer f?r B2B-Software in Z?rich at Scope Content AG</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://scope-content-ag.breezy.hr/p/fad6d7982e5e-senior-software-engineer-f-r-b2b-software-in-z-rich'>Senior Software Engineer f?r B2B-Software in Z?rich at Scope Content AG</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/PointsInternational/743999698406792-technical-lead-software-engineering'>Points International Technical Lead, Software Engineering | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PointsInternational/743999698406792-technical-lead-software-engineering'>Points International Technical Lead, Software Engineering | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Richmond Toronto, ON Canada</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -171,7 +171,7 @@
 <p><span class="badge badge-light">Shanghai</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/coupang/jobs/1914938'>Job Application for Principal Software Engineer_Marketing Platform at Coupang</a></h5> 
+<h5><a href='https://boards.greenhouse.io/coupang/jobs/1914938'>Job Application for Principal Software Engineer_Marketing Platform at Coupang</a></h5> 
 <p><span class="badge badge-light">Shanghai</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -285,11 +285,11 @@
 <p><span class="badge badge-light">Indianapolis, IN</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qS09VfwG&k=Job&j=oPN89fwD&__jvst=Employee+Referral&__jvsd=snfTCgwS&__jvsc=Twitter&bid=nYiXmMwQ'>Palo Alto Networks Careers - Senior Cloud Software Engineer (Cloud Security Infrastructure)</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qS09VfwG&k=Job&j=oPN89fwD&__jvst=Employee+Referral&__jvsd=snfTCgwS&__jvsc=Twitter&bid=nYiXmMwQ'>Palo Alto Networks Careers - Senior Cloud Software Engineer (Cloud Security Infrastructure)</a></h5> 
 <p><span class="badge badge-light">Palo Alto Palo Alto Santa Clara, California  Palo Alto</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qwkaVfwF&k=Job&j=oqHQafwR&__jvst=Employee&__jvsd=syGWShwO&__jvsc=Twitter&bid=nzaXmMwj&jvi=oqHQafwR,Job&jvk=Job'>Schneider Electric - UK Careers - Software Engineer - C.C++.C# Developer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qwkaVfwF&k=Job&j=oqHQafwR&__jvst=Employee&__jvsd=syGWShwO&__jvsc=Twitter&bid=nzaXmMwj&jvi=oqHQafwR,Job&jvk=Job'>Schneider Electric - UK Careers - Software Engineer - C.C++.C# Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -305,7 +305,7 @@
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Tradeshift/743999698350225-backend-software-engineer-apps-team'>Tradeshift Backend Software Engineer - Apps Team | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Tradeshift/743999698350225-backend-software-engineer-apps-team'>Tradeshift Backend Software Engineer - Apps Team | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Bucharest, Romania</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -349,7 +349,7 @@
 <p><span class="badge badge-light">San Diego, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.okta.com/company/careers/engineering/software-engineer-authentication-principal-1550323/?gh_src=24ee6a641'>Software Engineer, Authentication (Principal) | Okta</a></h5> 
+<h5><a href='https://www.okta.com/company/careers/engineering/software-engineer-authentication-principal-1550323/?gh_src=24ee6a641'>Software Engineer, Authentication (Principal) | Okta</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -385,7 +385,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qS09VfwG&k=Job&j=o1K89fwM&__jvst=Employee+Referral&__jvsd=saeqrgw0&__jvsc=Twitter&bid=nwZRmMwZ'>Palo Alto Networks Careers - Software Engineer - Malware Signatures</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qS09VfwG&k=Job&j=o1K89fwM&__jvst=Employee+Referral&__jvsd=saeqrgw0&__jvsc=Twitter&bid=nwZRmMwZ'>Palo Alto Networks Careers - Software Engineer - Malware Signatures</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -397,7 +397,7 @@
 <p><span class="badge badge-light">London London  London, United Kingdom  London</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/github/jobs/1901116'>Job Application for Senior Software Engineer - Dependabot at GitHub</a></h5> 
+<h5><a href='https://boards.greenhouse.io/github/jobs/1901116'>Job Application for Senior Software Engineer - Dependabot at GitHub</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
