Biogen Principal Analyst, Statistical Programming | SmartRecruiters. Biogen Statistical Programmer | SmartRecruiters. Remote Principal/Sr. Principal Biostatistician in Durham, from NeedLS, by Lori Steiner . Head of Biostatistics - Foghorn Therapeutics - Career Page. Premier Research Careers - Biostatistical Programmer.       Team Leader Biostatistics -Mechelen, BE - Galapagos     . Biostatistician - Decipher Biosciences - Career Page. Advent Global Solutions Biostatistician | SmartRecruiters. Sr Biostatistician - Syneos Health Careers. Sr Biostatistician II - PPD Careers. Principal Biostatistician - Department of Epidemiology and .... Biostatistician - PPD Careers.     Bioengineering Graduate Programs | College of Engineering | Oregon State University  . TFS - Jobs: Biostatistician - Apply online. Job Application for Temporary Biostatistician at ACADIA Pharmaceuticals. Premier Research Careers - Senior Biostatistician. TFS - Jobs: Senior Biostatistician - Apply online. TFS - Jobs: Biostatistician, home or office based (m/w/d) - Apply online. Sr Biostatistician - Syneos Health Careers. Senior Biostatistician - Home or Office based EU - Syneos Health Careers. Premier Research Careers - Senior Biostatistician (US based). Premier Research Careers - Biostatistical Programmer. Premier Research Careers - Biostatistical Programmer. Premier Research Careers - Biostatistical Programmer. Principal Biostatistician - PPD Careers.     Tuberculosis and Rabies Microbiologist at State of Maine . Principal Biostatistician - Syneos Health Careers. Job Application for Senior Biostatistician/Manager, Biostatistics at Myovant Sciences. Research Assistant I, Radiation Oncology Biostatistics | Houston, TX | MD Anderson. Research Assistant I, Radiation Oncology Biostatistics - MD Anderson Cancer Center Careers. Assistant Professor of Biological Anthropology 2578 | California State University, Long Beach. 	Chair and Full Professor - Department of Epidemiology/Biostatistics | ChronicleVitae .

--- a/biostatistics.html
+++ b/biostatistics.html
@@ -109,7 +109,7 @@ Remote Principal/Sr. Principal Biostatistician in Durham, from NeedLS, by Lori S
 <p><span class="badge badge-light">Los Angeles Los Angeles, CA, USA</span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
-<h5><a href='https://incresearch.referrals.selectminds.com/jobs/sr-biostatistician-31421'>Sr Biostatistician - Syneos Health Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://incresearch.referrals.selectminds.com/jobs/sr-biostatistician-31421'>Sr Biostatistician - Syneos Health Careers</a></h5> 
 <p><span class="badge badge-light">North America United States  North America United States  North America United States  North America United States</span></p>
 <p>Posted on: 2019-10-14</p>
 <hr/>
@@ -117,7 +117,7 @@ Remote Principal/Sr. Principal Biostatistician in Durham, from NeedLS, by Lori S
 <p><span class="badge badge-light">Shanghai, China</span></p>
 <p>Posted on: 2019-10-14</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://externaltalent-mskcc.icims.com/jobs/35964/principal-biotatistician---department-of-epidemiology-and-biostatistics/job'>Principal Biostatistician - Department of Epidemiology and ...</a></h5> 
+<h5><a href='https://externaltalent-mskcc.icims.com/jobs/35964/principal-biotatistician---department-of-epidemiology-and-biostatistics/job'>Principal Biostatistician - Department of Epidemiology and ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>12 hours ago ... Experience of collaborative research (including creating and maintaining data 
 files, writing application programs within a statistical software, analyzing data,?...</p>
@@ -126,7 +126,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://engineering.oregonstate.edu/bioengineering'>
+<h5><a href='https://engineering.oregonstate.edu/bioengineering'>
     Bioengineering Graduate Programs | College of Engineering | Oregon State University  </a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-10</p>
@@ -167,7 +167,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light">North Carolina</span></p>
 <p>Posted on: 2019-10-02</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=oQzfbfwz&__jvst=Employee+Referral&__jvsd=s8eovhw1&__jvsc=Twitter&bid=n9kIXMwp'>Premier Research Careers - Biostatistical Programmer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=oQzfbfwz&__jvst=Employee+Referral&__jvsd=s8eovhw1&__jvsc=Twitter&bid=n9kIXMwp'>Premier Research Careers - Biostatistical Programmer</a></h5> 
 <p><span class="badge badge-light">North Carolina</span></p>
 <p>Posted on:: 2019-10-02</p>
 <hr/>
@@ -231,7 +231,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-15</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/ultragenyx/13ff7a06-5729-4953-987c-821093103f12'>Ultragenyx Pharmaceutical Inc. - Executive Director, Biostatistics</a></h5> 
+<h5><a href='https://jobs.lever.co/ultragenyx/13ff7a06-5729-4953-987c-821093103f12'>Ultragenyx Pharmaceutical Inc. - Executive Director, Biostatistics</a></h5> 
 <p><span class="badge badge-light">Brisbane</span></p>
 <p>Posted on: 2019-09-15</p>
 <hr/>
@@ -351,7 +351,7 @@ midline and endline quantitative data collection points. The primary outcomes of
 <p><span class="badge badge-light">Sofia, Bulgaria</span></p>
 <p>Posted on:: 2019-09-01</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=ofqAafw9&__jvst=Employee+Referral&__jvsd=s8eovhw1&__jvsc=Twitter&bid=nhR5sLwV'>Premier Research Careers - Principal Biostatistical Programmer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=ofqAafw9&__jvst=Employee+Referral&__jvsd=s8eovhw1&__jvsc=Twitter&bid=nhR5sLwV'>Premier Research Careers - Principal Biostatistical Programmer</a></h5> 
 <p><span class="badge badge-light">Darmstadt, Germany</span></p>
 <p>Posted on:: 2019-09-01</p>
 <hr/>
@@ -388,11 +388,11 @@ midline and endline quantitative data collection points. The primary outcomes of
 <p>Aug 11, 2019 ... The Advanced Biostatistics & Data Analytics (ABDA) Centre of Excellence is part 
 of the Biostatistics department in the R&D Development organisation.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/153346D349'>Statistics & Data Corporation (SDC) - Jobs: Principal Biostatistician - Remote - Apply online</a></h5> 
+<h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/153346D349'>Statistics & Data Corporation (SDC) - Jobs: Principal Biostatistician - Remote - Apply online</a></h5> 
 <p><span class="badge badge-light">Waltham, Massachusetts</span></p>
 <p>Posted on: 2019-08-24</p>
 <hr/>
-<h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/C1A9F93A8E'>Statistics & Data Corporation (SDC) - Jobs: Principal Biostatistician - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/C1A9F93A8E'>Statistics & Data Corporation (SDC) - Jobs: Principal Biostatistician - Apply online</a></h5> 
 <p><span class="badge badge-light">Waltham, Massachusetts</span></p>
 <p>Posted on: 2019-08-24</p>
 <hr/>
@@ -408,7 +408,7 @@ of the Biostatistics department in the R&D Development organisation.</p>
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-08-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://syneoshealth.referrals.selectminds.com/jobs/principal-biostatistician-contract-30545'>Principal Biostatistician (Contract) - Syneos Health Careers</a></h5> 
+<h5><a href='https://syneoshealth.referrals.selectminds.com/jobs/principal-biostatistician-contract-30545'>Principal Biostatistician (Contract) - Syneos Health Careers</a></h5> 
 <p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-08-19</p>
 <hr/>
